# office-automation-mcp

./: LICENSE  README.md  brand.py  mcp_server.py  pyproject.toml  themes.json  utils.py
examples/: client-pitch.py
slides/: __init__.py  cards.py  content.py  cta.py  funscale.py  process.py  quotes.py  thanks.py  title.py
