[project]
name = "office-automation-mcp"
version = "1.0.0"
description = "MCP server for PowerPoint presentation generation and editing"
requires-python = ">=3.10"
dependencies = [
    "python-pptx>=1.0.0",
    "fastmcp>=2.0.0",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"
